added most of the content for the about page and most of the css I will need

--- a/index.html
+++ b/index.html
@@ -8,20 +8,83 @@
 	<script src="assets/javascript/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-	<header>
-		<span>
-			<h1 style="display:inline;">John Price</h1>
-		</span>
-		<span>
-			<a href="index.html">About</a>
-		</span>
-		<span>
-			<a href="contact.html">Contact</a>
-		</span>
-		<span>
-			<a href="portfolio.html">Portfolio</a>
-		</span>
-	</header>
+	<div class="siteContainer">
+		<header class="myHeader">
+			<div class="myHeaderContainer">
+				<div class="myNameContainer">
+					<h1 class="nameHeader">John Price</h1>
+				</div>
+				<div class="myNav">
+					<div class="menuLink">
+						<a href="index.html">About</a>
+					</div>
+					<div class="menuLink">
+						<a href="contact.html">Contact</a>
+					</div>
+					<div class="menuLink">
+						<a href="portfolio.html">Portfolio</a>
+					</div>
+				</div>
+			</div>
+		</header>
+		<div class="normalContainer clearFix">
+			<section class="mainSection">
+				<div class="mainSectionContainer">
+					<header class="mainSectionHeader">
+						<h2>
+							About Me
+						</h2>
+					</header>
+					<img id="profileImage" src="assets/images/john.jpg" alt="A picture of me">
+					<p>
+	                    Hi there! Welcome to my personal website. Thank you for being here.
+	                </p>
+	                <br>
+	                <p>
+	                    I'm a software developer from the Charlotte, NC area who loves tackling challenging problems.
+	                    Seriously, sometimes I forget to go to the bathroom when I'm nose-deep in my computer screen. Writing code is something that I love
+	                    to do and I'm always interested in exploring exciting and new technology. I received my B.S. in Computer Science from Wake Forest
+	                    University in May of 2015 and I've been learning new things ever since.
+	                </p>
+	                <br>
+	                <p>
+	                    Although software development is fun and all, I do have other hobbies.
+	                    I like reading, running, and breakdancing. If you ever see me dancing in public,
+	                    it's not my twin brother (I promise).
+	                </p>
+	                <br>
+				</div>
+			</section>
+			<section class="sideSection">
+				<div class="sideSectionContainer">
+					<header class="sideSectionHeader">
+						<h3>
+							Connect With Me
+						</h3>
+					</header>
+					<div class="iconsContainer">
+						<span class="iconContainer">
+							<a href="#" target="_blank">
+								<img class="iconImg" src="assets/images/gitHubIcon.png" alt="GitHub">
+							</a>
+						</span>
+						<span class="iconContainer">
+							<a href="#" target="_blank">
+								<img class="iconImg" src="assets/images/linkedInIcon.png" alt="LinkedIn">
+							</a>
+						</span>
+						<span class="iconContainer">
+							<a href="#" target="_blank">
+								<img class="iconImg" src="assets/images/stackOverflowIcon.png" alt="Stack Overflow">
+							</a>
+						</span>
+					</div>
+				</div>
+			</section>
+		</div>
+		<div class=myFooter>
+		</div>
+	</div>
 	<script src="assets/javascript/javascript.js"></script>
 </body>
 </html>
