Added base html to other pages (contact and portfolio) also re-did the sticky footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="assets/javascript/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-	<div class="siteContainer">
+	<div class="wrap clearFix">
 		<header class="myHeader">
 			<div class="myHeaderContainer">
 				<div class="myNameContainer">
@@ -82,8 +82,8 @@
 				</div>
 			</section>
 		</div>
-		<div class=myFooter>
-		</div>
+	</div>
+	<div class=myFooter>
 	</div>
 	<script src="assets/javascript/javascript.js"></script>
 </body>
