--- a/portfolio.html
+++ b/portfolio.html
@@ -8,20 +8,65 @@
 	<script src="assets/javascript/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-	<header>
-		<span>
-			<h1 style="display:inline;">John Price</h1>
-		</span>
-		<span>
-			<a href="index.html">About</a>
-		</span>
-		<span>
-			<a href="contact.html">Contact</a>
-		</span>
-		<span>
-			<a href="portfolio.html">Portfolio</a>
-		</span>
-	</header>
+	<div class="wrap clearFix">
+		<header class="myHeader">
+			<div class="myHeaderContainer">
+				<div class="myNameContainer">
+					<h1 class="nameHeader">John Price</h1>
+				</div>
+				<div class="myNav">
+					<div class="menuLink">
+						<a href="index.html">About</a>
+					</div>
+					<div class="menuLink">
+						<a href="contact.html">Contact</a>
+					</div>
+					<div class="menuLink">
+						<a href="portfolio.html">Portfolio</a>
+					</div>
+				</div>
+			</div>
+		</header>
+		<div class="normalContainer clearFix">
+			<section class="mainSection">
+				<div class="mainSectionContainer">
+					<header class="mainSectionHeader">
+						<h2>
+							Portfolio
+						</h2>
+					</header>
+				</div>
+			</section>
+			<section class="sideSection">
+				<div class="sideSectionContainer">
+					<header class="sideSectionHeader">
+						<h3>
+							Connect With Me
+						</h3>
+					</header>
+					<div class="iconsContainer">
+						<span class="iconContainer">
+							<a href="#" target="_blank">
+								<img class="iconImg" src="assets/images/gitHubIcon.png" alt="GitHub">
+							</a>
+						</span>
+						<span class="iconContainer">
+							<a href="#" target="_blank">
+								<img class="iconImg" src="assets/images/linkedInIcon.png" alt="LinkedIn">
+							</a>
+						</span>
+						<span class="iconContainer">
+							<a href="#" target="_blank">
+								<img class="iconImg" src="assets/images/stackOverflowIcon.png" alt="Stack Overflow">
+							</a>
+						</span>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+	<div class=myFooter>
+	</div>
 	<script src="assets/javascript/javascript.js"></script>
 </body>
 </html>
