added most of the html for the contact page and the corresponding css with it.

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,27 @@
 							Contact
 						</h2>
 					</header>
+					<div class="subContainer">
+						<form id="contactForm">
+							<br>
+							<label for="nameId">Name</label>
+							<br>
+							<input class="myFormInput myFormElement" type="text" id="nameId" name="name" placeholder="John Doe">
+							<br>
+							<br>
+							<label for="emailId">Email</label>
+							<br>
+							<input class="myFormInput myFormElement" type="text" id="emailId" name="email" placeholder="example@example.com">
+							<br>
+							<br>
+							<label for="messageId">Message</label>
+							<br>
+							<textarea class="myFormInpu myFormElement" name="messageName" id="messageId" cols="30" rows="10"></textarea>
+							<br>
+							<br>
+							<input id="mySubmitButton" type="submit" value="Submit">
+						</form>
+					</div>
 				</div>
 			</section>
 			<section class="sideSection">
