--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,9 @@
 		</div>
 	</div>
 	<div class=myFooter>
+		<div class="copyContainer">
+			&copy Copyright 2017 John Price
+		</div>
 	</div>
 	<script src="assets/javascript/javascript.js"></script>
 </body>
