--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 		</div>
 	</div>
 	<div class=myFooter>
+		<div class="copyContainer">
+			&copy Copyright 2017 John Price
+		</div>
 	</div>
 	<script src="assets/javascript/javascript.js"></script>
 </body>
