--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,9 @@
 		</div>
 	</div>
 	<div class=myFooter>
+		<div class="copyContainer">
+			&copy Copyright 2017 John Price
+		</div>
 	</div>
 	<script src="assets/javascript/javascript.js"></script>
 </body>
