--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,48 @@
 							Portfolio
 						</h2>
 					</header>
+					<div class="subContainer">
+						<div class="tableContainer">
+							<table class="myTable">
+								<tr class="myTr">
+									<td style="background-color: yellow" class="myTd">
+										<div class="card cardLeft">
+											<img class="cardImage" src="assets/images/john.jpg" alt="card1">
+											<div class="cardBanner">
+												Hangman
+											</div>
+										</div>
+									</td>
+									<td style="background-color: red" class="myTd">
+										<div class="card cardRight">
+											<img class="cardImage" src="assets/images/breakin.jpg" alt="card2">
+											<div class="cardBanner">
+												RPG Game
+											</div>
+										</div>
+									</td>
+								</tr>
+								<tr class="myTr">
+									<td style="background-color: blue" class="myTd">
+										<div class="card cardLeft">
+											<img class="cardImage" src="assets/images/momentum.jpg" alt="card1">
+											<div class="cardBanner">
+												Trivia Game
+											</div>
+										</div>
+									</td>
+									<td style="background-color: green" class="myTd">
+										<div class="card cardRight">
+											<img class="cardImage" src="assets/images/john2.jpeg" alt="card2">
+											<div class="cardBanner">
+												Rutgers Info Widget
+											</div>
+										</div>
+									</td>
+								</tr>
+							</table>
+						</div>
+					</div>
 				</div>
 			</section>
 			<section class="sideSection">
