added javascript in order to get decent image banners :(

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,38 +39,54 @@
 						<div class="tableContainer">
 							<table class="myTable">
 								<tr class="myTr">
-									<td style="background-color: yellow" class="myTd">
+									<td class="myTd">
 										<div class="card cardLeft">
-											<img class="cardImage" src="assets/images/john.jpg" alt="card1">
-											<div class="cardBanner">
-												Hangman
-											</div>
+											<a href="#" target="_blank">
+												<div class="imageWrapper">
+													<img class="cardImage" src="assets/images/john.jpg" alt="card1">
+													<!-- <div class="cardBanner">
+														Hangman
+													</div> -->
+												</div>
+											</a>
 										</div>
 									</td>
-									<td style="background-color: red" class="myTd">
+									<td class="myTd">
 										<div class="card cardRight">
-											<img class="cardImage" src="assets/images/breakin.jpg" alt="card2">
-											<div class="cardBanner">
-												RPG Game
-											</div>
+											<a href="#" target="_blank">
+												<div class="imageWrapper">
+													<img class="cardImage" src="assets/images/breakin.jpg" alt="card2">
+													<!-- <div class="cardBanner">
+														RPG Game
+													</div> -->
+												</div>
+											</a>
 										</div>
 									</td>
 								</tr>
 								<tr class="myTr">
-									<td style="background-color: blue" class="myTd">
+									<td class="myTd">
 										<div class="card cardLeft">
-											<img class="cardImage" src="assets/images/momentum.jpg" alt="card1">
-											<div class="cardBanner">
-												Trivia Game
-											</div>
+											<a href="#" target="_blank">
+												<div class="imageWrapper">
+													<img class="cardImage" src="assets/images/momentum.jpg" alt="card1">
+													<!-- <div class="cardBanner">
+														Trivia Game
+													</div> -->
+												</div>
+											</a>
 										</div>
 									</td>
-									<td style="background-color: green" class="myTd">
+									<td class="myTd">
 										<div class="card cardRight">
-											<img class="cardImage" src="assets/images/john2.jpeg" alt="card2">
-											<div class="cardBanner">
-												Rutgers Info Widget
-											</div>
+											<a href="#" target="_blank">
+												<div class="imageWrapper">
+													<img class="cardImage" src="assets/images/john2.jpeg" alt="card2">
+													<!-- <div class="cardBanner">
+														Rutgers Info Widget
+													</div> -->
+												</div>
+											</a>
 										</div>
 									</td>
 								</tr>
@@ -109,7 +125,7 @@
 	</div>
 	<div class=myFooter>
 		<div class="copyContainer">
-			&copy Copyright 2017 John Price
+			&copy; Copyright 2017 John Price
 		</div>
 	</div>
 	<script src="assets/javascript/javascript.js"></script>
