added new images and made small css changes

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 					</header>
 					<div class="iconsContainer">
 						<span class="iconContainer">
-							<a href="#" target="_blank">
+							<a href="https://github.com/jcprice12" target="_blank">
 								<img class="iconImg" src="assets/images/gitHubIcon.png" alt="GitHub">
 							</a>
 						</span>
@@ -88,7 +88,7 @@
 	</div>
 	<div class=myFooter>
 		<div class="copyContainer">
-			&copy Copyright 2017 John Price
+			&copy; Copyright 2017 John Price
 		</div>
 	</div>
 	<script src="assets/javascript/javascript.js"></script>
