--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 					</header>
 					<div class="iconsContainer">
 						<span class="iconContainer">
-							<a href="#" target="_blank">
+							<a href="https://github.com/jcprice12" target="_blank">
 								<img class="iconImg" src="assets/images/gitHubIcon.png" alt="GitHub">
 							</a>
 						</span>
 						<span class="iconContainer">
-							<a href="#" target="_blank">
+							<a href="https://www.linkedin.com/in/john-price-a86ab264" target="_blank">
 								<img class="iconImg" src="assets/images/linkedInIcon.png" alt="LinkedIn">
 							</a>
 						</span>
 						<span class="iconContainer">
-							<a href="#" target="_blank">
+							<a href="https://stackoverflow.com/users/8223183/jcprice12?tab=profile" target="_blank">
 								<img class="iconImg" src="assets/images/stackOverflowIcon.png" alt="Stack Overflow">
 							</a>
 						</span>
@@ -85,7 +85,7 @@
 	</div>
 	<div class=myFooter>
 		<div class="copyContainer">
-			&copy Copyright 2017 John Price
+			&copy; Copyright 2017 John Price
 		</div>
 	</div>
 	<script src="assets/javascript/javascript.js"></script>
