--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
 					</header>
 					<div class="iconsContainer">
 						<span class="iconContainer">
-							<a href="#" target="_blank">
+							<a href="https://github.com/jcprice12" target="_blank">
 								<img class="iconImg" src="assets/images/gitHubIcon.png" alt="GitHub">
 							</a>
 						</span>
