Re-did portfolio thumbnails

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,54 +41,54 @@
 							<table class="myTable">
 								<tr class="myTr">
 									<td class="myTd">
-										<div class="card cardLeft">
-											<a href="#" target="_blank">
-												<div class="imageWrapper">
-													<img class="cardImage" src="assets/images/john.jpg" alt="card1">
-													<!-- <div class="cardBanner">
+										<a href="#" target="_blank">
+											<div class="card cardLeft">
+													<div class="imageWrapper">
+														<img class="cardImage" src="assets/images/john.jpg" alt="card1">
+													</div>
+													<div class="cardBanner">
 														Hangman
-													</div> -->
-												</div>
-											</a>
-										</div>
+													</div>
+											</div>
+										</a>
 									</td>
 									<td class="myTd">
-										<div class="card cardRight">
-											<a href="#" target="_blank">
-												<div class="imageWrapper">
-													<img class="cardImage" src="assets/images/breakin.jpg" alt="card2">
-													<!-- <div class="cardBanner">
+										<a href="#" target="_blank">
+											<div class="card cardRight">
+													<div class="imageWrapper">
+														<img class="cardImage" src="assets/images/breakin.jpg" alt="card2">
+													</div>
+													<div class="cardBanner">
 														RPG Game
-													</div> -->
-												</div>
-											</a>
-										</div>
+													</div>
+											</div>
+										</a>
 									</td>
 								</tr>
 								<tr class="myTr">
 									<td class="myTd">
-										<div class="card cardLeft">
-											<a href="#" target="_blank">
-												<div class="imageWrapper">
-													<img class="cardImage" src="assets/images/momentum.jpg" alt="card1">
-													<!-- <div class="cardBanner">
+										<a href="#" target="_blank">
+											<div class="card cardLeft">
+													<div class="imageWrapper">
+														<img class="cardImage" src="assets/images/momentum.jpg" alt="card3">
+													</div>
+													<div class="cardBanner">
 														Trivia Game
-													</div> -->
-												</div>
-											</a>
-										</div>
+													</div>
+											</div>
+										</a>
 									</td>
 									<td class="myTd">
-										<div class="card cardRight">
-											<a href="#" target="_blank">
-												<div class="imageWrapper">
-													<img class="cardImage" src="assets/images/john2.jpeg" alt="card2">
-													<!-- <div class="cardBanner">
+										<a href="#" target="_blank">
+											<div class="card cardRight">
+													<div class="imageWrapper">
+														<img class="cardImage" src="assets/images/john2.jpeg" alt="card4">
+													</div>
+													<div class="cardBanner">
 														Rutgers Info Widget
-													</div> -->
-												</div>
-											</a>
-										</div>
+													</div>
+											</div>
+										</a>
 									</td>
 								</tr>
 							</table>
