--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,8 @@
 	<title>John Price</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script src="assets/javascript/jquery-3.2.1.min.js"></script>
-	<script src="assets/javascript/javascript.js"></script>
+	<!-- <script src="assets/javascript/jquery-3.2.1.min.js"></script> -->
+	<!-- <script src="assets/javascript/javascript.js"></script> -->
 </head>
 <body>
 	<div class="wrap clearFix">
@@ -42,7 +42,7 @@
 								<tr class="myTr">
 									<td class="myTd">
 										<a href="#" target="_blank">
-											<div class="card cardLeft">
+											<div class="card">
 													<div class="imageWrapper">
 														<img class="cardImage" src="assets/images/john.jpg" alt="card1">
 													</div>
@@ -54,7 +54,7 @@
 									</td>
 									<td class="myTd">
 										<a href="#" target="_blank">
-											<div class="card cardRight">
+											<div class="card">
 													<div class="imageWrapper">
 														<img class="cardImage" src="assets/images/breakin.jpg" alt="card2">
 													</div>
@@ -68,7 +68,7 @@
 								<tr class="myTr">
 									<td class="myTd">
 										<a href="#" target="_blank">
-											<div class="card cardLeft">
+											<div class="card">
 													<div class="imageWrapper">
 														<img class="cardImage" src="assets/images/momentum.jpg" alt="card3">
 													</div>
@@ -80,7 +80,7 @@
 									</td>
 									<td class="myTd">
 										<a href="#" target="_blank">
-											<div class="card cardRight">
+											<div class="card">
 													<div class="imageWrapper">
 														<img class="cardImage" src="assets/images/john2.jpeg" alt="card4">
 													</div>
