--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>John Price</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script src="assets/javascript/jquery-3.2.1.min.js"></script>
+	<!-- <script src="assets/javascript/jquery-3.2.1.min.js"></script> -->
 </head>
 <body>
 	<div class="wrap clearFix">
